@@ -2348,7 +2348,7 @@ Note:  Directives in red are required, while those in black are optional.
 
 <tr><td></td><td class="Required">alias</td><td class="Required"><i>alias</i></td></tr>
 
-<tr><td></td><td class="Required">members</td><td class="Required"><i>contacts</i></td></tr>
+<tr><td></td><td class="Optional">members</td><td class="Optional"><i>contacts</i></td></tr>
 
 <tr><td></td><td class="Optional">contactgroup_members</td><td class="Optional"><i>contactgroups</i></td></tr>
 
@@ -2414,7 +2414,7 @@ This directive is used to define a longer name or description used to identify t
 
 <td>
 
-This directive is used to define a list of the <i>short names</i> of <a href="#contact">contacts </a> that should be included in this group.   Multiple contact names should be separated by commas.  This directive may be used as an alternative to (or in addition to) using the <i>contactgroups</i> directive in <a href="#contact">contact</a> definitions.
+This optional directive is used to define a list of the <i>short names</i> of <a href="#contact">contacts </a> that should be included in this group.   Multiple contact names should be separated by commas.  This directive may be used as an alternative to (or in addition to) using the <i>contactgroups</i> directive in <a href="#contact">contact</a> definitions.
 
 </td>
 
