@@ -26,11 +26,11 @@ if ($? == 0) {
 system("$nagios -vp '$etc/nagios.cfg' > /dev/null") == 0 or die "Cannot create precached objects file";
 system("grep -v 'Created:' $precache > '$precache.generated'");
 
-my $diff = "diff -u $precache.generated $precache.expected";
+my $diff = "diff -u $precache.expected $precache.generated";
 system("$diff > /dev/null");
 if ($? == 0) {
 	pass( "Nagios precached objects file matches expected" );
 } else {
-	fail( "Nagios precached objects discrepency!!!\nTest with: $diff\nCopy with: cp $precache.expected $precache.expected" );
+	fail( "Nagios precached objects discrepency!!!\nTest with: $diff\nCopy with: cp $precache.generated $precache.expected" );
 }	
 
